rbdl/tests/binary.stderr
error: proc macro panicked
 --> $DIR/binary.rs:3:1
  |
3 | rbdl_file!("tests/rbdl/binary.rbdl");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: tests/rbdl/binary.rbdl: stream did not contain valid UTF-8
