rbdl/tests/binary.rs
use rbdl::rbdl_file;

rbdl_file!("tests/rbdl/binary.rbdl");

fn main() {

}